--- a/clientserverchat/pom.xml
+++ b/clientserverchat/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.vinogor</groupId>
     <artifactId>client-server-chat</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -19,5 +20,11 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>client</module>
+        <module>network</module>
+        <module>sever</module>
+        <module>distr</module>
+    </modules>
 
 </project>
